--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">SACATEUNDIEZ</a>
+	      <a class="navbar-brand" href="index.html">SACATEUNDIEZ</a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li><a href="#">¿Quienes somos?<span class="sr-only">(current)</span></a></li>
+	        <li><a href="index.html">¿Quienes somos?</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias <span class="caret"></span></a>
 	          <ul class="dropdown-menu" role="menu">
@@ -100,6 +100,9 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
       </a>
     </div>
-    
+
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 </body>
 </html>
