--- a/index.html
+++ b/index.html
@@ -36,19 +36,18 @@
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav">
+	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="index.html">¿Quienes somos?</a></li>
 	        <li class="dropdown">
-	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias <span class="caret"></span></a>
+	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias<span class="caret"></span></a>
 	          <ul class="dropdown-menu" role="menu">
 	            <li><a href="#">Primaria</a></li>
 	            <li><a href="#">Secundaria</a></li>
-	            <li class="divider"></li>
 	            <li><a href="#">CBC</a></li>
 	            <li><a href="#">Universidad</a></li>
 	          </ul>
 	        </li>
-	        <li><a class="nav-link" href="#">Comentarios</a></li>
+	        <li><a href="#">Comentarios</a></li>
 	        <li><a href="#">Precios</a></li>
 	        <li><a href="#">Contacto</a></li>
 	      </ul>
@@ -60,12 +59,12 @@
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
       <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-        <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1" class=""></li>
         <li data-target="#myCarousel" data-slide-to="2" class=""></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="item">
+        <div class="item active">
           <img class="first-slide" src="http://placehold.it/600x300?text=SACATEUNDIEZ" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
@@ -74,7 +73,7 @@
             </div>
           </div>
         </div>
-        <div class="item active">
+        <div class="item">
           <img class="second-slide" src="http://placehold.it/600x300?text=SACATEUNDIEZ" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
@@ -100,6 +99,18 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
       </a>
     </div>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+		<div class="container-fuild">
+			<div class="row"> 
+				<div class="col-xs-12">
+					Copyright © 2015 SACATEUNDIEZ - Sacate un gran 10
+				</div>
+			</div>
+		</div>
+	</footer>
+
 
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
