Fix chico con el background la hamburguesa de la navbar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+	<!-- Navigation bar -->
 	<nav class="navbar navbar-default main-navbar">
 	  <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
