--- a/precios.html
+++ b/precios.html
@@ -59,50 +59,18 @@
 	  </div><!-- /.container-fluid -->
 	</nav>
 	
-	<!-- Carrousel con las imagenes -->
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-        <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="http://placehold.it/600x300?text=SACATEUNDIEZ" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Llegó la innovación en clases particulares</h1>
-              <p></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide" src="http://placehold.it/600x300?text=SACATEUNDIEZ" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Tomá clases con profesores expertos en el tema</h1>
-              <p>Somos un grupo de docentes de la facultad de Ciencias Exactas y Naturales de la UBA y dictamos clases de nivel primario, secundario, universitario y CBC.</p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="http://placehold.it/600x300?text=SACATEUNDIEZ" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>¡¡No desaproveches nuestras promociones!!</h1>
-              <button type="button" class="btn btn-default btn-precios"><a href="precios.html">Ver Precios</a></button>
-            </div>
-          </div>
-        </div>
+    <!-- Informacion -->
+
+    <section class="container">
+      <div class="row">
+        <article class="col-md-6">
+          <h1>Hola1</h1>
+        </article>
+        <article class="col-md-6">
+          <h1>Hola2</h1>
+        </article>
       </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
-      </a>
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer class="site-footer">
