Favicon. + Algunos cambios de links

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
     
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/custom.css">
 
-    <title>SACATEUNDIEZ</title>
+    <title>SACATEUNDIEZ | La solucion en clases particulares</title>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -32,7 +34,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">
+	      <a class="navbar-brand" href="index.html">
           SACATEUNDIEZ
           <p>11-6852-3521 - sacateundiez52@gmail.com</p>
         </a>
@@ -41,7 +43,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="index.html">¿Quienes somos?</a></li>
+	        <li><a href="#">¿Quienes somos?</a></li>
 	        <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias<span class="caret"></span></a>
 	          <ul class="dropdown-menu" role="menu">
