--- a/materias/secundaria.html
+++ b/materias/secundaria.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="../favicon.ico"/>
     
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/custom.css">
+    <link rel="stylesheet" type="text/css" href="../styles/custom.css">
 
     <title>SACATEUNDIEZ | La solucion en clases particulares</title>
 
@@ -34,7 +34,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="index.html">
+	      <a class="navbar-brand" href="../index.html">
           SACATEUNDIEZ
           <p>11-6852-3521 - sacateundiez52@gmail.com</p>
         </a>
@@ -43,19 +43,19 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="quienessomos.html">¿Quienes somos?</a></li>
+	        <li><a href="../quienessomos.html">¿Quienes somos?</a></li>
 	        <li class="dropdown">
-	          <a href="materias.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias<span class="caret"></span></a>
+	          <a href="../materias.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias<span class="caret"></span></a>
 	          <ul class="dropdown-menu" role="menu">
-	            <li><a href="materias/primaria.html">Primaria</a></li>
-	            <li><a href="materias/secundaria.html">Secundaria</a></li>
-	            <li><a href="materias/cbc.html">CBC</a></li>
-	            <li><a href="materias/universidad.html">Universidad</a></li>
+	            <li><a href="primaria.html">Primaria</a></li>
+	            <li><a href="secundaria.html">Secundaria</a></li>
+	            <li><a href="cbc.html">CBC</a></li>
+	            <li><a href="universidad.html">Universidad</a></li>
 	          </ul>
 	        </li>
-	        <li><a href="comentarios.html">Comentarios</a></li>
-	        <li><a href="precios.html">Precios</a></li>
-	        <li><a href="contacto.html">Contacto</a></li>
+	        <li><a href="../comentarios.html">Comentarios</a></li>
+	        <li><a href="../precios.html">Precios</a></li>
+	        <li><a href="../contacto.html">Contacto</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
