--- a/precios.html
+++ b/precios.html
@@ -60,10 +60,35 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<!-- Informacion -->
+
+	<section class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				<h1 class="title">Precios</h1>
+				<ul class="lista-precios">
+					<li>1 Persona:  $150 C/U</li>
+					<li>2 Personas: $115 C/U</li>
+					<li>3 Personas: $92,50 C/U</li>
+					<li>4 Personas: $70 C/U</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+	<section class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				<p>El precio es por hora de clase. La clase es como mínimo una hora y media (90 minutos)</p>
+				<p>Las precios pueden variar según nivel de materia</p>
+			</div>
+		</div>
+	</section>
 	
 
-  <!-- Footer -->
-  <footer class="site-footer">
+	<!-- Footer -->
+	<footer class="site-footer">
 		<div class="container-fuild">
 			<div class="row"> 
 				<div class="col-xs-12">
