--- a/contacto.html
+++ b/contacto.html
@@ -60,10 +60,23 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<!-- Info de contacto -->
+
+	<section class="container">
+		<div class="row">
+			<div class="col-xs-12 contact-page">
+				<h1 class="title">Contacto</h1>
+				<h3>¿Tenés dudas? ¡Nos encantaría resolverlas!</h3>
+				<p>Contactanos por teléfono al <span class="telefono">11 3402 3168 (Federico)</span> o <span class="telefono">11 6852 3521 (Gabriel)</span></p>
+				<p>O por mail a <a href="mailto:sacateundiez52@gmail.com">sacateundiez@gmail.com</a> </p>
+			</div>
+		</div>
+	</section>
 	
 
-  <!-- Footer -->
-  <footer class="site-footer">
+	<!-- Footer -->
+	<footer class="site-footer">
 		<div class="container-fuild">
 			<div class="row"> 
 				<div class="col-xs-12">
@@ -74,8 +87,8 @@
 	</footer>
 
 
-  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </body>
 </html>
