--- a/materias/secundaria.html
+++ b/materias/secundaria.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+
 	<!-- Navigation bar -->
 	<nav class="navbar navbar-default main-navbar">
 	  <div class="container-fluid">
@@ -35,9 +36,9 @@
 	        <span class="icon-bar"></span>
 	      </button>
 	      <a class="navbar-brand" href="../index.html">
-          SACATEUNDIEZ
-          <p>11-6852-3521 - sacateundiez52@gmail.com</p>
-        </a>
+	      SACATEUNDIEZ
+	      <p>11-6852-3521 - sacateundiez52@gmail.com</p>
+	    </a>
 	    </div>
 
 	    <!-- Collect the nav links, forms, and other content for toggling -->
@@ -60,10 +61,29 @@
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
+
+	<!-- Content -->
+	<section class="container">
+		<div class="row">
+			<div class="col-xs-12">
+				<h1 class="title title-secundaria">
+					Materias Secundaria <br>
+					<p>Todos los niveles de secudaria</p>
+				</h1>
+
+				<ul class="lista-materias">
+					<li>Matemática</li>
+					<li>Física</li>
+					<li>Química</li>
+					<li>Economía</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 	
 
-  <!-- Footer -->
-  <footer class="site-footer">
+	<!-- Footer -->
+	<footer class="site-footer">
 		<div class="container-fuild">
 			<div class="row"> 
 				<div class="col-xs-12">
@@ -74,8 +94,8 @@
 	</footer>
 
 
-  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </body>
 </html>
