Agregado un fondito a las paginas

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 	<!-- Navigation bar -->
   <nav class="navbar navbar-default main-navbar">
-    <div class="container-fluid">
+    <div class="container-fluid container-green">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -104,10 +104,10 @@
       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
       </a>
-    </div>
+  </div>
 
-    <!-- Footer -->
-    <footer class="site-footer">
+  <!-- Footer -->
+  <footer class="site-footer">
 		<div class="container-fuild">
 			<div class="row"> 
 				<div class="col-xs-12">
@@ -118,8 +118,8 @@
 	</footer>
 
 
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </body>
 </html>
