--- a/materias.html
+++ b/materias.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
+    <link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
     
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/custom.css">
@@ -26,44 +26,45 @@
 <body>
 	<!-- Navigation bar -->
 	<nav class="navbar navbar-default main-navbar">
-	  <div class="container-fluid">
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="index.html">
-          SACATEUNDIEZ
-          <p>11-6852-3521 - sacateundiez52@gmail.com</p>
-        </a>
-	    </div>
+	<div class="container-fluid container-green">
+	  <!-- Brand and toggle get grouped for better mobile display -->
+	  <div class="navbar-header">
+	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="index.html">
+	      SACATEUNDIEZ
+	      <p>11-6852-3521 - sacateundiez52@gmail.com</p>
+	    </a>
+	  </div>
 
-	    <!-- Collect the nav links, forms, and other content for toggling -->
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="quienessomos.html">¿Quienes somos?</a></li>
-	        <li class="dropdown">
-	          <a href="materias.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias<span class="caret"></span></a>
-	          <ul class="dropdown-menu" role="menu">
-	            <li><a href="materias/primaria.html">Primaria</a></li>
-	            <li><a href="materias/secundaria.html">Secundaria</a></li>
-	            <li><a href="materias/cbc.html">CBC</a></li>
-	            <li><a href="materias/universidad.html">Universidad</a></li>
-	          </ul>
-	        </li>
-	        <li><a href="comentarios.html">Comentarios</a></li>
-	        <li><a href="precios.html">Precios</a></li>
-	        <li><a href="contacto.html">Contacto</a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+	  <!-- Collect the nav links, forms, and other content for toggling -->
+	  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    <ul class="nav navbar-nav navbar-right">
+	      <li><a href="quienessomos.html">¿Quienes somos?</a></li>
+	      <li class="dropdown">
+	        <a href="materias.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias<span class="caret"></span></a>
+	        <ul class="dropdown-menu" role="menu">
+	          <li><a href="materias/primaria.html">Primaria</a></li>
+	          <li><a href="materias/secundaria.html">Secundaria</a></li>
+	          <li><a href="materias/cbc.html">CBC</a></li>
+	          <li><a href="materias/universidad.html">Universidad</a></li>
+	        </ul>
+	      </li>
+	      <li><a href="comentarios.html">Comentarios</a></li>
+	      <li><a href="precios.html">Precios</a></li>
+	      <li><a href="contacto.html">Contacto</a></li>
+	    </ul>
+	  </div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
 	</nav>
 	
 
-  <!-- Footer -->
-  <footer class="site-footer">
+
+	<!-- Footer -->
+	<footer class="site-footer">
 		<div class="container-fuild">
 			<div class="row"> 
 				<div class="col-xs-12">
@@ -74,8 +75,8 @@
 	</footer>
 
 
-  <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </body>
 </html>
