--- a/materias/secundaria.html
+++ b/materias/secundaria.html
@@ -27,7 +27,7 @@
 
 	<!-- Navigation bar -->
 	<nav class="navbar navbar-default main-navbar">
-	  <div class="container-fluid">
+	  <div class="container-fluid container-green">
 	    <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
 	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
