--- a/index.html
+++ b/index.html
@@ -24,10 +24,18 @@
 </head>
 
 <body>
+  
+  <!-- Testing del tamaño de la pantalla -->
+  <!-- <h1 class="visible-xs">ExtraSmall</h1>
+  <h1 class="visible-sm">Small</h1>
+  <h1 class="visible-md">Medium</h1>
+  <h1 class="visible-lg">Large</h1> -->
+
 	<!-- Navigation bar -->
   <nav class="navbar navbar-default main-navbar">
     <div class="container-fluid container-green">
       <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="line-top-left"></div>
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="icon-bar"></span>
@@ -35,7 +43,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          SACATEUNDIEZ
+          <span class="title-sacateundiez">SACATE</span><span class="title-sacateundiez">UN</span><span class="title-sacateundiez">DIEZ</span>
           <p>11-6852-3521 - sacateundiez52@gmail.com</p>
         </a>
       </div>
@@ -60,6 +68,7 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
+
 	
 	<!-- Carrousel con las imagenes -->
 	<div id="myCarousel" class="carousel slide" data-ride="carousel">
