Algunos comentarios del codigo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <span class="title-sacateundiez">SACATE</span><span class="title-sacateundiez">UN</span><span class="title-sacateundiez">DIEZ</span>
+          <span class="title-sacateundiez">SACATE</span><span class="title-sacateundiez">UN</span><span class="title-sacateundiez">DIEZ</span> <!-- Los spans estan para la separacion de las palabras, si no hace falta sacarlo -->
           <p>11-6852-3521 - sacateundiez52@gmail.com</p>
         </a>
       </div>
