--- a/index.html
+++ b/index.html
@@ -2,25 +2,29 @@
 <html lang="es">
 
 <head>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
-    
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles/custom.css">
+  <meta name="description" content="Clases particulares para primaria, secundaria, cbc y universidad con profesores especializados">
+  <meta name="keywords" content="clases, primaria, secundaria, cbc, universidad, uba, utn, profesor, profesores, particular">
+  <meta name="author" content="Nicolas Armenti">
+  <meta name="robots" content="index, follow">
+  <meta name="revisit-after" content="1 month">
 
-    <title>SACATEUNDIEZ | La solucion en clases particulares</title>
+  <link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-   </head>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="styles/custom.css">
+
+  <title>SACATEUNDIEZ | La solucion en clases particulares</title>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 
 <body>
@@ -71,48 +75,50 @@
 
 	
 	<!-- Carrousel con las imagenes -->
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1" class=""></li>
-        <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide" src="http://placehold.it/600x300?text=SACATEUNDIEZ" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Llegó la innovación en clases particulares</h1>
-              <p></p>
+	<div class="container-fluid container-full">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1" class=""></li>
+          <li data-target="#myCarousel" data-slide-to="2" class=""></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+          <div class="item active">
+            <img class="first-slide" src="http://placehold.it/1600x900?text=SACATEUNDIEZ">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Llegó la innovación en clases particulares</h1>
+                <p></p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img class="second-slide" src="http://placehold.it/1600x900?text=SACATEUNDIEZ">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>Tomá clases con profesores expertos en el tema</h1>
+                <p>Somos un grupo de docentes de la facultad de Ciencias Exactas y Naturales de la UBA y dictamos clases de nivel primario, secundario, universitario y CBC.</p>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <img class="third-slide" src="http://placehold.it/1600x900?text=SACATEUNDIEZ" alt="Third slide">
+            <div class="container">
+              <div class="carousel-caption">
+                <h1>¡¡No desaproveches nuestras promociones!!</h1>
+                <button type="button" class="btn btn-default btn-precios"><a href="precios.html">Ver Precios</a></button>
+              </div>
             </div>
           </div>
         </div>
-        <div class="item">
-          <img class="second-slide" src="http://placehold.it/600x300?text=SACATEUNDIEZ" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>Tomá clases con profesores expertos en el tema</h1>
-              <p>Somos un grupo de docentes de la facultad de Ciencias Exactas y Naturales de la UBA y dictamos clases de nivel primario, secundario, universitario y CBC.</p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide" src="http://placehold.it/600x300?text=SACATEUNDIEZ" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <h1>¡¡No desaproveches nuestras promociones!!</h1>
-              <button type="button" class="btn btn-default btn-precios"><a href="precios.html">Ver Precios</a></button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
-      </a>
-      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
-      </a>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true">
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right" aria-hidden="true">
+        </a>
+    </div>
   </div>
 
   <!-- Footer -->
