Probando nuevo estilo para la navbar y el footer para que queden fijos arriba/abajo Todavia no puedo hacer andar el carousel bien en todas las resoluciones

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <h1 class="visible-lg">Large</h1> -->
 
 	<!-- Navigation bar -->
-  <nav class="navbar navbar-default main-navbar">
+  <nav class="navbar navbar-default main-navbar custom-header">
     <div class="container-fluid container-green">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="line-top-left"></div>
@@ -85,7 +85,7 @@
         </ol>
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img class="first-slide" src="http://placehold.it/1600x900?text=SACATEUNDIEZ">
+            <img class="first-slide img-responsive center-block" src="http://placehold.it/1920x1080?text=SACATEUNDIEZ">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Llegó la innovación en clases particulares</h1>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="item">
-            <img class="second-slide" src="http://placehold.it/1600x900?text=SACATEUNDIEZ">
+            <img class="second-slide img-responsive center-block" src="http://placehold.it/1920x1080?text=SACATEUNDIEZ">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Tomá clases con profesores expertos en el tema</h1>
@@ -103,7 +103,7 @@
             </div>
           </div>
           <div class="item">
-            <img class="third-slide" src="http://placehold.it/1600x900?text=SACATEUNDIEZ" alt="Third slide">
+            <img class="third-slide img-responsive center-block" src="http://placehold.it/1920x1080?text=SACATEUNDIEZ" alt="Third slide">
             <div class="container">
               <div class="carousel-caption">
                 <h1>¡¡No desaproveches nuestras promociones!!</h1>
