--- a/new/index.html
+++ b/new/index.html
@@ -71,40 +71,31 @@
     <!-- Begin page content -->
     <!-- Carousel con las fotos y algunos textos -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img class="first-slide" src="http://placehold.it/1920x1080?text=SACATEUNDIEZ" alt="First slide">
+          <img class="first-slide" src="./img/Pizarra_negro.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1>Llegó la innovación en clases particulares</h1>
+              <p></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="second-slide" src="http://placehold.it/1920x1080?text=SACATEUNDIEZ" alt="Second slide">
+          <img class="second-slide" src="./img/Pizarra_verde.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>Tomá clases con profesores expertos en el tema</h1>
+              <p>Somos un grupo de docentes de la facultad de Ciencias Exactas y Naturales de la UBA y dictamos clases de nivel primario, secundario, universitario y CBC.</p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="http://placehold.it/1920x1080?text=SACATEUNDIEZ" alt="Third slide">
+          <img class="third-slide" src="./img/Libro.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>¡¡No desaproveches nuestras promociones!!</h1>
+              <button type="button" class="btn btn-default btn-precios"><a href="precios.html">Ver Precios</a></button>
             </div>
           </div>
         </div>
@@ -118,6 +109,12 @@
         <span class="sr-only">Next</span>
       </a>
     </div><!-- /.carousel -->
+    <!-- Carousel Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
     
 
     <!-- Begin footer section -->
