--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="item">
-            <img class="second-slide img-responsive center-block" src="http://placehold.it/1920x1080?text=SACATEUNDIEZ">
+            <img class="second-slide img-responsive center-block" src="http://sacateundiez.github.io/new/img/Pizarra_negro.jpg">
             <div class="container">
               <div class="carousel-caption">
                 <h1>Tomá clases con profesores expertos en el tema</h1>
