--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <span class="title-sacateundiez">SACATEUNDIEZ</span>
+          <span class="title-sacate un diez 52">SACATEUNDIEZ</span>
           <p>11-6852-3521 - sacateundiez52@gmail.com</p>
         </a>
       </div>
